--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
+* {
+  font-family: sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input,
+button {
+  font-size: 20px;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input {
+  display: block;
+  margin-bottom: 20px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button {
+  border: 1px solid gray;
+  background: whitesmoke;
+  margin-right: 5px;
+  transform: rotateX(5deg) rotateY(5deg);
+  transition: transform 0.3s ease-in-out;
+}
+button:nth-last-child(2),
+button:nth-last-child(1) {
+  background: tomato;
   color: white;
+  transform: rotateX(5deg) rotateY(5deg);
+  transition: transform 0.3s ease-in-out;
+}
+button:hover {
+  cursor: pointer;
+  background-color: #ef7707;
+  transform: rotateX(10deg) rotateY(10deg);
+}
+.result {
+  font-size: 20px;
+  padding: 10px;
+  margin: 0  1650px 20px 0;
+  border-radius: 5px;
+  background: #f2f2f2;
+  text-align: left;
+ 
 }
 
-.App-link {
-  color: #61dafb;
-}
+  
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
